--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
             <div class="nav-container">
 
 
-                <div class="logo-container">
+                <a href="index.html" class="logo-container">
                     <svg class="logo-svg" viewBox="20 0 100 60">
                         <text class="logo-text" x="50%" y="50%">SeTI</text>
                     </svg>
-                </div>
-                
+                </a>
                 
 
 
