--- a/index.html
+++ b/index.html
@@ -467,8 +467,6 @@
 
 
 
-
-
 <!-- Contacto -->
 <section class="section contact" id="contact">
     
@@ -517,9 +515,26 @@
                     </a>
                 </div>
             </div>
+            <!-- Nueva sección para YouTube -->
+            <div class="contact-item">
+                <div class="contact-icon">
+                    <i class="fab fa-youtube"></i> <!-- Icono de YouTube -->
+                </div>
+                <div class="contact-text">
+                    <h3>Explora mis videos</h3>
+                    <p>Visita mi canal de YouTube para tutoriales y contenido relacionado con informática.</p>
+                    <a href="https://www.youtube.com/@hugomrj" class="btn-youtube" target="_blank">
+                        <i class="fab fa-youtube"></i> Ver en YouTube
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+
+
+
+
 
 
 
