--- a/newyear.html
+++ b/newyear.html
@@ -162,7 +162,7 @@ p{
 </head>
 <body>
 
-<div class="scroll-hint">Desliza hacia abajo ↓</div>
+<div class="scroll-hint">Desliza</div>
 
 <div class="container">
 
