--- a/newyear.html
+++ b/newyear.html
@@ -183,7 +183,7 @@ p{
 
 <section id="final">
   <h2>Bienvenido 2026</h2>
-  <p>Hoy empieza tu mejor versión</p>
+  <p>Haz que valga cada día</p>
   <div id="countdown">3</div>
 </section>
 
