--- a/newyear.html
+++ b/newyear.html
@@ -235,7 +235,7 @@ const obs=new IntersectionObserver(e=>{
     const el=document.getElementById('countdown');
     const i=setInterval(()=>{
       c--;
-      el.textContent=c>0?c:"¡FELIZ 2026!";
+      el.textContent=c>0?c:"¡FELIZ AÑO NUEVO!";
       if(c===0){
         clearInterval(i);
         const f=document.createElement('div');
